Fixes #1130: Popup overlaps the main menu partly. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1238 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2110,7 +2110,7 @@ div#sumBox table tr:first-child td { border-top-width: 0px;
     font-family: Tahoma, Arial, Helvetica, sans-serif;
     font-size: 11px;
     line-height: 13px;
-    z-index: 6;
+    z-index: 11;
     }
 
 .dropdown_BG { background: url(../images/dropdown_BG.png) no-repeat bottom left; margin-top: 10px; padding: 0px 10px 9px 2px;}
